--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,7 @@
 <html lang="en-US">
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="src/main.js"></script>
-  <script type="text/javascript" src="src/triangle.js"></script>
+  <script type="text/javascript" src="bundle.js"></script>
   <link rel="stylesheet" href="css/styles.css">
   <title>Shape Tracker</title>
 </head>
